# har2pytest

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  api_generator.py  api_request.har  config.py  har2pytest_config.json  har2pytest_config.json.example  har2pytest_execution_flow.md  har2pytest_testcase_list_query_flow.md  har_parser.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  swagger_updater.py  test.py  test_match.py  test_swagger_deposit.py  testcase_generator.py  utils.py  上传图片.har  兑换单代客售后.har  兑换单列表.har  兑换订单管理.har  分页查询代客售后订单管理列表.har  创建抽奖活动.har  报表.har  押货单详情.har  抽奖活动.har  新增盲盒文案.har  新增盲盒海报.har  新建优惠券.har  新建赠品.har  电子礼券.har  (+1 more)
.github/workflows/: ci.yml  docs.yml  publish.yml
api/mall_store_application/: __init__.py  _appStore_common_isStoreInTrafficControl.py  _appStore_store_dis_mortgageOrder_detail_id.py  _appStore_store_dis_mortgageOrder_getMortgageAmount.py  _appStore_store_signProfessionalCapacity_storeCode_id.py
apis/basic_services/: __init__.py  _storage_upload.py
apis/mall_center_inventory/: __init__.py  _invt_discredit_getPeriodCreditMsg.py
apis/mall_center_user/: __init__.py  _user_mgmt_order_detail.py  _user_mgmt_order_page.py  _user_mgmt_order_return_queryOrder.py  _user_mgmt_order_return_submit.py  _user_order_getStoreAgentOrderList.py
apis/mall_mgmt_application/: __init__.py  _mgmt_acc_banner_add.py  _mgmt_acc_banner_list.py  _mgmt_acc_banner_shelf.py  _mgmt_acc_banner_sort.py  _mgmt_acc_banner_update.py  _mgmt_acc_cleaner_count.py  _mgmt_acc_cleaner_detail_id.py  _mgmt_acc_cleaner_export.py  _mgmt_acc_cleaner_list.py  _mgmt_acc_cleaner_log_list_id.py  _mgmt_acc_cleaner_page.py  _mgmt_acc_cleaner_protocol_get.py  _mgmt_acc_cleaner_protocol_save.py  _mgmt_acc_cleaner_status_update.py  _mgmt_acc_instructions_add.py  _mgmt_acc_instructions_checkDuplicate.py  _mgmt_acc_instructions_detail_id.py  _mgmt_acc_instructions_list.py  _mgmt_acc_instructions_shelf.py  _mgmt_acc_instructions_sort.py  _mgmt_acc_instructions_update.py  _mgmt_acc_item_add.py  _mgmt_acc_item_detail_id.py  _mgmt_acc_item_page.py  (+3130 more)
docs/: api_file_generation.md  har_file_parsing.md  index.md  swagger_document_parsing.md  testcase_generation_modes.md
har2pytest/: __init__.py  __main__.py  api_generator.py  client.py  config.py  har_generator.py  har_parser.py  logger.py  swagger_handler.py  swagger_updater.py  testcase_generator.py  url_matcher.py  utils.py
har2pytest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testcases/: test_appStore_store_dis_mortgageOrder_detail_id.py  test_mgmt_prmt_luckyActivity_luckyActivityList.py  test_mgmt_prmt_luckyActivity_luckyActivityList_01.py  test_mgmt_prmt_state_luckyActivity.py  test_mgmt_prmt_state_waitExamineCount.py  test_storage_upload.py  test_user_mgmt_order_page.py  test_user_mgmt_order_return_queryOrder.py  test_user_mgmt_order_return_submit.py  test_user_order_getStoreAgentOrderList.py  test_user_order_getStoreAgentOrderList_01.py  test_兑换单代客售后.py  test_报表.py  test_押货单详情.py  test_电子礼券.py
tests/: har2pytest_config_test.json  pytest.ini  run_test.py  test_api_generator.py  test_async_client.py  test_client.py  test_config.py  test_har_generator.py  test_har_parser.py  test_swagger_handler.py  test_swagger_updater.py  test_testcase_generator.py  test_url_matcher.py  test_utils.py
util/: client.py  login_crypto.py
(+620 files in other folders)
