[project]
name = "har2pytest"
version = "1.3.1"
description = "从HAR文件，Swagger接口文档自动生成API接口文件和pytest+allure测试用例"
authors = [
    { name = "hewei", email = "hewei1987@163.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["har", "swagger", "pytest", "allure", "api", "testcase"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Code Generators"
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "allure-pytest>=2.15.3",
    "allure-python-commons>=2.15.3",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0"
]

[project.urls]
homepage = "https://github.com/hewei198711/har2pytest"
repository = "https://github.com/hewei198711/har2pytest"

[project.scripts]
har2pytest = "har2pytest.__main__:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."], include = ["har2pytest"] }

[tool.ruff]
# 行长度限制
line-length = 120

# 启用的规则集：E=错误, F=格式, I=导入排序, UP=升级建议
lint.select = ["E", "F", "I", "UP"]

# 忽略的规则（如行长度检查）
lint.ignore = ["E501"]

# 排除的目录
exclude = [".git", "__pycache__", "venv", ".venv"]

# 缩进宽度
indent-width = 4

[tool.ruff.format]
# 引号风格
quote-style = "double"

[tool.basedpyright]
# 可选: "off" | "basic" | "standard" | "strict"
typeCheckingMode = "basic"

reportImportCycles = false
reportExplicitAny = false

